@@ -79,4 +79,7 @@ public class UserProp {
 
     public static final String CLIPBOARD_MONITORING = "clipboardMonitoring";
     public static final boolean CLIPBOARD_MONITORING_DEFAULT = true;
+
+    public static final String ANIMATE_ICON = "animateIcon";
+    public static final boolean ANIMATE_ICON_DEFAULT = true;
 }
