@@ -52,7 +52,7 @@ panelErrorHandling.border=Error handling
 panelDownloadsSettings.border=Downloads
 panelAppearance.border=Appearance
 panelSound.border=Sound
-labelMaxConcurrentDownloads.text=&Max concurrent downloads at a time*
+labelMaxConcurrentDownloads.text=&Max concurrent downloads at a time
 labelRequiresRestart.text=* Effective on restart
 labelErrorAttemptsCount.text=&Error attempts count
 labelAutoReconnectTime.text=&Autoreconnect time
